--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,7 +3,7 @@ name: Auto Merge PR
 
 on:
   pull_request:
-    branches: [ main ]
+    types: [opened, reopened]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
