--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,29 +1,28 @@
-
-name: Auto Merge PR
-
+name: automerge
 on:
   pull_request:
-    types: [opened, reopened]
-
-  # Allows you to run this workflow manually from the Actions tab
-#   workflow_dispatch:
-
+    types:
+      - labeled
+      - unlabeled
+      - synchronize
+      - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - unlocked
+  pull_request_review:
+    types:
+      - submitted
+  check_suite:
+    types:
+      - completed
+  status: {}
 jobs:
-  merge:
-    # The type of runner that the job will run on
+  automerge:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Run a one-line script
-        run: echo Hello, world!
-      
-      - name: Auto approve
-        uses: hmarr/auto-approve-action@v2.2.1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-       
-      - name: Merginator 2
-        uses: managedkaos/merge-pull-request@v2.0.2
+      - id: automerge
+        name: automerge
+        uses: "pascalgn/automerge-action@v0.15.2"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
