--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -21,9 +21,10 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
-      - id: automerge
-        name: automerge
-        uses: "pascalgn/automerge-action@v0.15.2"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABEL: "automerge"
+      - name: Auto Merge Bot
+        # You may pin to the exact commit or the version.
+        # uses: casassg/auto-merge-bot@8f9d4eef86461f8f102f7bc3ba53c1359201fb18
+        uses: casassg/auto-merge-bot@v0.3.2
+        with:
+          merge_method: 'merge'
+          
